fixed graph spacing

--- a/viewexpenses.css
+++ b/viewexpenses.css
@@ -92,7 +92,7 @@ body b{
 }
 
 #barChart {
-    margin-top: 100px;
+    margin-top: 40px;
 }
 
 #lineChart {
